--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-         "prettus/l5-repository": "^2.9",
+         "prettus/l5-repository": "^2.9"
     }
 }
